dataset1235/2025-2/1153765216/users/2357208246/executions/2052804200_3974737893.log
== SUBMISSION (2025-09-02 19:24:33)
-- CODE: 
x = int(input())
y = int(input())
resto = x%y
if(resto == 0):
  print(x//y)
  print('sim')
else:
  print(resto,'nao')
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
3 nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
11 nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
1 nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:22:52)
-- CODE: 
numero_x = int(input())
numero_y = int(input())

if(x%y == 0):
  print('sim')
else:
  print('nao')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:22:48)
-- CODE: 
numero_x = int(input())
numero_y = int(input())

if(x%y == 0):
  print('sim')
else:
  print('nao')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:23:12)
-- CODE: 
x = int(input())
y = int(input())

if(x%y == 0):
  print('sim')
else:
  print('nao')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:22:50)
-- CODE: 
numero_x = int(input())
numero_y = int(input())

if(x%y == 0):
  print('sim')
else:
  print('nao')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x%y == 0):
       ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:23:11)
-- CODE: 
x = int(input())
y = int(input())

if(x%y == 0):
  print('sim')
else:
  print('nao')
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
---- user output:
nao
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
---- user output:
sim
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
---- user output:
sim
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
---- user output:
sim
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
---- user output:
nao
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
